--- a/test/sdk-app/settings.gradle
+++ b/test/sdk-app/settings.gradle
@@ -5,5 +5,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "My Application"
+rootProject.name = "aminilogtest"
 include ':app'
